--- a/front/src/components/sidebar/Sidebar.css
+++ b/front/src/components/sidebar/Sidebar.css
@@ -16,6 +16,10 @@
     justify-content: space-between;
 }
 
+.sidebar-hidden {
+    display: none;
+}
+
 .sidebar-field-group {
     width: 100%;
     text-align: center;
