--- a/front/src/components/sidebar/Sidebar.css
+++ b/front/src/components/sidebar/Sidebar.css
@@ -1,4 +1,7 @@
+/* --------------------- Dekstop ------------------------ */
+
 .sidebar {
+    float: left;
     margin: 0;
     padding: 0;
     width: 20%;
