--- a/front/src/components/freelancer/HomePageFreelancer.css
+++ b/front/src/components/freelancer/HomePageFreelancer.css
@@ -26,3 +26,42 @@ img.pic-card {
     height: 50px;
     border-radius: 50%;
 }
+
+img.pic-profil{
+    width: 15%;
+    border-radius: 50%;
+}
+
+.homepage-content {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+div.infos-profil {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+div.reste-profil {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 60%;
+    margin: auto;
+    text-align: center;
+    justify-content: space-around;
+}
+
+p.champs-profil {
+ min-width: 40%;
+ border: 2px solid;
+ text-align: center;
+}
+
+Button.btn, Button.btn:hover {
+    background: #ED6A09;
+    width: 20%;
+    font-size: larger;
+    margin:0px 40%;
+}
