--- a/front/src/components/freelancer/HomePageFreelancer.css
+++ b/front/src/components/freelancer/HomePageFreelancer.css
@@ -35,6 +35,7 @@ img.pic-profil{
 .homepage-content {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 div.infos-profil {
