meilleur version de prototype

--- a/front/src/components/admin/MissionCreateAdmin.css
+++ b/front/src/components/admin/MissionCreateAdmin.css
@@ -77,6 +77,10 @@ div.mission-card {
     width: 62%;
 }
 
+div.selector-mission {
+    display: flex;
+    justify-content: space-between;
+}
 
 .formi{
     color: #000099;
