--- a/front/src/components/admin/Creation_NeoWorker_Page.css
+++ b/front/src/components/admin/Creation_NeoWorker_Page.css
@@ -33,8 +33,8 @@
 }
 
 ::placeholder {
-    color: #ED6A09;
-    opacity: 0.5;
+    color: #ED6A09 !important;
+    opacity: 0.5 !important;
 }
 
 .input-metier {
@@ -81,11 +81,7 @@
 .input-firstname, 
 .input-lastname, 
 .input-email, 
-.input-tel,
-.input-tj_min,
-.input-tj_max,
-.input-dispo,
-.input-pref_lieu_travail
+.input-tel
 {
     margin-top:10px;
     margin-bottom:10px;
@@ -110,12 +106,23 @@
     width: 80%
 }
 
-.input-tj_min,
-.input-tj_max,
-.input-dispo,
-.input-pref_lieu_travail
+.div-tj_min,
+.div-tj_max,
+.div-dispo,
+.div-pref_lieu_travail
 {
     width: 47%;
+    display:flex;
+    flex-direction: column;
+    margin-top:10px;
+    margin-bottom:10px;
+    text-align: center;
+    border-radius: 10px;
+    border-color: white;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
+    color: rgba(5, 57, 152, 0.5);
+    font-size: 24px;
+    font-weight: bold;
 }
 
 
