--- a/front/src/components/admin/Creation_NeoWorker_Page.css
+++ b/front/src/components/admin/Creation_NeoWorker_Page.css
@@ -81,7 +81,8 @@
 .input-firstname, 
 .input-lastname, 
 .input-email, 
-.input-tel
+.input-tel,
+.input-password
 {
     margin-top:10px;
     margin-bottom:10px;
@@ -114,7 +115,7 @@
     width: 47%;
     display:flex;
     flex-direction: column;
-    margin-top:10px;
+    margin-top: 10px;
     margin-bottom:10px;
     text-align: center;
     border-radius: 10px;
@@ -125,4 +126,25 @@
     font-weight: bold;
 }
 
+.input-tj_min,
+.input-tj_max,
+.input-dispo,
+.input-pref_lieu_travail 
+{
+    text-align: center;
+    border-radius: 10px;
+    border-color: white;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
+    color: rgba(5, 57, 152, 0.5);
+    font-size: 24px;
+    font-weight: bold;
+}
 
+
+.input-group-text {
+    color: #ED6A09 !important;
+    font-weight: bold !important;
+    opacity: 0.5 !important;
+    align-self: center !important;
+    width: 100% !important;
+}
