--- a/front/src/components/freelancer/HomePageFreelancer.css
+++ b/front/src/components/freelancer/HomePageFreelancer.css
@@ -19,7 +19,7 @@ h1.freelancer-h1 {
 div.profil-card {
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-end;
+	justify-content: space-between;
     align-items: center;
 }
 
@@ -27,60 +27,119 @@ p.name-card {
     margin: 0px;
 }
 
-img.pic-card {
-    height: 50px;
-    border-radius: 50%;
-}
 
-img.pic-profil{
-    width: 15%;
-    border-radius: 50%;
-}
-
-.homepage-profil {
+.align-photoprofilwithinput-div-freelancer {
     display: flex;
-    align-items: center;
     flex-direction: row;
     justify-content: space-between;
 }
 
-div.infos-profil {
+.profil-img-creation-freelancer {
+    border-radius: 50%;
+    width: 50%;
+}
+
+.picture-profil{
+    width: 50%;
+    border-radius: 50%;
+}
+
+.homepage-profil {
+    width: 80%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 50px;
+    align-self: center;
+}
+
+.infos-profil {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 50%;
 }
 
-div.reste-profil {
+.reste-profil {
+    width: 80%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 60%;
     margin: auto;
-    text-align: center;
     justify-content: space-around;
     list-style-type: none;
 }
 
-div.container-reste-profile{
+.container-reste-profile{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
 }
 
-.champs-profil {
- width: 100%;
- height: 40px;
- border: 2px solid;
- text-align: center;
+.champs-profil-title {
+    width: 80%;
+    height: 40px;
+    border: 2px solid;
+    align-self: center;
+    align-content: center;
+    width: 80%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    border-color: white;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
+    color: rgba(5, 57, 152, 0.5);
+    font-size: 24px;
+    font-weight: bold;
 }
 
+.champs-profil {
+    margin-top: 10px;
+    width: 100%;
+    height: 40px;
+    border: 2px solid;
+    align-self: center;
+    width: 80%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    border-color: white;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
+    color: rgba(5, 57, 152, 0.5);
+    font-size: 24px;
+    font-weight: bold;
+}
+.container-champs-reste-profil{
+    width: 20%;
+}
+
+p:empty:not(:focus)::before {
+    content: attr(data-placeholder);
+  }
+
 .champs-reste-profil {
+    margin: 10px;
     width: 50%;
     height: 40px;
     border: 2px solid;
     text-align: center;
     justify-content: space-around;
+    align-self: center;
+    width: 80%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    border-color: white;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
+    color: rgba(5, 57, 152, 0.5);
+    font-size: 24px;
+    font-weight: bold;
    }
 
 Button.btn, Button.btn:hover {
@@ -88,4 +147,5 @@ Button.btn, Button.btn:hover {
     width: 20%;
     font-size: larger;
     margin:0px 40%;
+    border-radius: .25rem;
 }
