--- a/front/src/components/admin/Creation_NeoWorker_Page.css
+++ b/front/src/components/admin/Creation_NeoWorker_Page.css
@@ -47,7 +47,7 @@
     border-radius: 10px;
     border-color: white;
     box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: rgba(5, 57, 152, 0.5);
+    color: #000099;
     font-size: 24px;
     font-weight: bold;
 }
@@ -90,7 +90,7 @@
     border-radius: 10px;
     border-color: white;
     box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: rgba(5, 57, 152, 0.5);
+    color: #000099;
     font-size: 24px;
     font-weight: bold;
 
@@ -123,7 +123,7 @@
     border-radius: 10px;
     border-color: white;
     box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: rgba(5, 57, 152, 0.5);
+    color: #000099;
     font-size: 24px;
     font-weight: bold;
 }
@@ -138,7 +138,7 @@
     border-radius: 10px;
     border-color: white;
     box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: rgba(5, 57, 152, 0.5);
+    color: #000099;
     font-size: 24px;
     font-weight: bold;
 }
@@ -155,7 +155,7 @@
 .separator-line {
     height: 30px;
     border-style: solid;
-    border-color:  rgba(5, 57, 152, 0.5);
+    border-color:  #000099;
     border-width: 1px 0 0 0;
     border-radius: 20px;
     width: 80%;
@@ -169,7 +169,7 @@
     height: 30px;
     margin-top: -31px;
     border-style: solid;
-    border-color: rgba(5, 57, 152, 0.5);
+    border-color: #000099;
     border-width: 0 0 1px 0;
     border-radius: 20px;
 }
@@ -198,7 +198,7 @@
     margin: 10px;
     width: 25%;
     min-width: 25%;
-    color: rgba(5, 57, 152, 0.5);
+    color: #000099;
 
 }
 
@@ -218,5 +218,5 @@
     border-radius: .25rem;
 }
 .champ-libre {
-    color: rgba(5, 57, 152, 0.5);
+    color: #000099;
 }
