create missionListeCard for better code

--- a/front/src/components/admin/MissionsListe.css
+++ b/front/src/components/admin/MissionsListe.css
@@ -55,7 +55,7 @@ div.thirdrow-card {
 
 p.dateofmission {
     color: #000099;
-    font-size: small;
+    font-size: 15px;
 }
 
 p.titleofmission {
