--- a/front/src/components/searchbar/SearchBarMissions.css
+++ b/front/src/components/searchbar/SearchBarMissions.css
@@ -3,6 +3,10 @@
     margin-top: 10px;
     font-size: 20px;
     display: flex;
-    text-align: center;
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: column;
+    width: 40%;
+    
 }
 
