--- a/front/src/components/searchbar/SearchBarNeo.css
+++ b/front/src/components/searchbar/SearchBarNeo.css
@@ -1,3 +1,11 @@
-.search{
+.search {
+    margin-left: 10px;
+    margin-top: 10px;
+    font-size: 20px;
+    display: flex;
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: column;
+    width: 40%;
     
 }
