--- a/front/src/components/admin/Creation_NeoWorker_Page.css
+++ b/front/src/components/admin/Creation_NeoWorker_Page.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
 
+
 }
 
 .profil-card {
@@ -25,9 +26,16 @@
     border-radius: 50%;
 }
 
+.main-title {
+    width: 80%;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    
+}
 .formulaire-creation-neoworker {
     display:flex;
     flex-direction: column;
+    align-items: center;
     height: auto;
 
 }
@@ -82,8 +90,11 @@
 .input-lastname, 
 .input-email, 
 .input-tel,
-.input-password
+.input-password,
+.input-address,
+.input-cp
 {
+    width: 95%;
     margin-top:10px;
     margin-bottom:10px;
     text-align: center;
@@ -97,7 +108,8 @@
 }
 
 .second-div-creation-neoworker, 
-.third-div-creation-neoworker {
+.third-div-creation-neoworker,
+.fourth-div-creation-neoworker {
     display:flex;
     flex-direction: row;
     justify-content: space-between;
@@ -112,7 +124,8 @@
 .div-tj_max,
 .div-dispo,
 .div-pref_lieu_travail,
-.div-mobilite
+.div-mobilite,
+.div-km_max
 {
     width: 47%;
     display:flex;
@@ -132,23 +145,24 @@
 .input-tj_max,
 .input-dispo,
 .input-pref_lieu_travail,
-.input-mobilite
+.input-mobilite,
+.input-Km_max
 {
-    text-align: center;
-    border-radius: 10px;
-    border-color: white;
-    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: #000099;
-    font-size: 24px;
-    font-weight: bold;
+    text-align: center !important;
+    border-radius: 10px !important;
+    border-color: white !important;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
+    color: #000099 !important;
+    font-size: 24px !important;
+    font-weight: bold !important;
 }
+
 
 
 .input-group-text {
     color: #ED6A09 !important;
     font-weight: bold !important;
     opacity: 0.5 !important;
-    align-self: center !important;
     width: 100% !important;
 }
 
@@ -161,6 +175,7 @@
     width: 80%;
     margin-top: 50px;
     margin-bottom: 50px;
+    font-weight: bold;
 }
 
 .separator-line:before { /* Not really supposed to work, but does */
@@ -172,6 +187,7 @@
     border-color: #000099;
     border-width: 0 0 1px 0;
     border-radius: 20px;
+    font-weight: bold;
 }
 
 .title-softskills {
@@ -189,9 +205,11 @@
 .div-rating {
     align-self: center;
     width: 80%;
+    font-weight: bold;
 }
 
-.mission-card {
+.mission-card,
+.champ-libre{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -201,21 +219,30 @@
 
 }
 
+.champ-libre {
+    width: 50% !important;
+}
+
 .cards{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    border: 2px solid #c4c4c4;
+    border-radius: .25rem;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
+    margin-bottom: 20px;
 }
 
-.mission-title {
+.mission-title,
+.main-title {
     color: #ED6A09;
     font-size: 40px;
     display: flex;
     justify-content: center;
     border: 2px solid #c4c4c4;
     border-radius: .25rem;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
 }
-.champ-libre {
-    color: #000099;
-}
+
+
