avancée du code sur la famille de prestation

--- a/front/src/components/admin/Creation_NeoWorker_Page.css
+++ b/front/src/components/admin/Creation_NeoWorker_Page.css
@@ -172,7 +172,7 @@
     border-color:  #000099;
     border-width: 1px 0 0 0;
     border-radius: 20px;
-    width: 80%;
+    width: 80vw !important;
     margin-top: 50px;
     margin-bottom: 50px;
     font-weight: bold;
