--- a/front/src/components/admin/HomePageAdmin.css
+++ b/front/src/components/admin/HomePageAdmin.css
@@ -25,6 +25,23 @@
     border-radius: 50%;
 }
 
+.home-pic {
+    width: 600px;
+    height: auto;
+    align-self: center;
+    padding-top: 50px;
+}
+
+.heart {    
+    width: 25px;
+    height: auto;
+}
+
+p.made{
+    position: absolute;
+    bottom: 5px;
+    right: 20px;}
+
 .admin-homepage-title {
     font-weight: bold;
     font-size: 56px;
