--- a/front/src/components/admin/MissionCreateAdmin.css
+++ b/front/src/components/admin/MissionCreateAdmin.css
@@ -6,11 +6,12 @@
     color: #000099;
 }
 
-div.admin-mission {
+div.admin-mission, div.admin-neoworker {
     color: #000099;
     width: 80%;
     height: 100%;
     float: right;
+    font-weight: 600;
 }
 
 h1.admin-h1{
@@ -19,7 +20,7 @@ h1.admin-h1{
     font-weight: bold;
 }
 
-div.notes {
+div.body {
     width: 80%;
     margin: auto;
 }
@@ -47,6 +48,7 @@ Button.btn, Button.btn:hover {
 
 ::placeholder {
     color: #ED6A09!important;
+    font-weight: 600;
 }
 
 h2.mission-title {
@@ -75,12 +77,12 @@ div.mission-card {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
 }
 
 div.selector-mission {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .formi{
@@ -96,4 +98,15 @@ div.cards{
 
 .date-mission{
     color: #ED6A09!important;
+}
+
+select#pref_lieu_de_travail.form-control,
+select#mobilite.form-control,
+select#km_max.form-control {
+    width: 250px;
+}
+
+
+input, textarea {
+    font-weight: 600!important;
 }
