--- a/front/src/components/admin/Creation_NeoWorker_Page.css
+++ b/front/src/components/admin/Creation_NeoWorker_Page.css
@@ -1,222 +1,4 @@
-.main-div {
-    width: 80%;
-    height: auto;
-    float: right;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    color: #000099;
-    font-weight: bold;
-}
-
-.profil-card {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin: 20px;
-}
-
-.name-card {
-    margin: 0px;
-    padding-right: 15px;
-}
-
-.pic-card {
-    height: 50px;
-    border-radius: 50%;
-}
-
-.main-title {
-    width: 80%;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    
-}
-
-.formulaire-creation-neoworker {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    height: auto;
-
-}
-
-::placeholder {
-    color: #ED6A09 !important;
-    opacity: 0.5 !important;
-}
-
-.input-metier {
-    align-self: center;
-    width: 80%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-    text-align: center;
-    border-radius: 10px;
-    border-color: white;
-    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: #000099;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.first-div-creation-neoworker {
-    display:flex;
-    flex-direction: column;
-    width: 80%;
-    justify-content: space-around;
-    align-self: center;
-}
-
-.align-photoprofilwithinput-div {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.profil-img-creation {
-    border-radius: 50%;
-    width: 30%;
-}
-
-.align-field-text-div {
-    display:flex;
-    flex-direction: column;
-    width: 50%;
-}
-
-.input-firstname, 
-.input-lastname, 
-.input-email, 
-.input-tel,
-.input-password,
-.input-address,
-.input-cp
-{
-    width: 95%;
-    margin-top:10px;
-    margin-bottom:10px;
-    text-align: center;
-    border-radius: 10px;
-    border-color: white;
-    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: #000099;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.second-div-creation-neoworker, 
-.third-div-creation-neoworker,
-.fourth-div-creation-neoworker,
-.fifth-div-creation-neoworker {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    text-align:center;
-    align-self:center;
-    width: 80%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.div-tj_min,
-.div-tj_max,
-.div-dispo,
-.div-pref_lieu_travail,
-.div-mobilite,
-.div-km_max
-{
-    width: 47%;
-    display:flex;
-    flex-direction: column;
-    margin-top: 10px;
-    margin-bottom:10px;
-    text-align: center;
-    border-radius: 10px;
-    border-color: white;
-    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: #000099;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.input-tj_min,
-.input-tj_max,
-.input-dispo,
-.input-pref_lieu_travail,
-.input-mobilite,
-.input-Km_max,
-.famille-prestation-select
-{
-    text-align: center !important;
-    border-radius: 10px !important;
-    border-color: white !important;
-    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
-    color: #000099 !important;
-    font-size: 24px !important;
-    font-weight: bold !important;
-}
-
-.input-group-text {
-    color: #ED6A09 !important;
-    font-weight: bold !important;
-    opacity: 0.5 !important;
-    width: 100% !important;
-}
-
-.separator-line {
-    height: 30px;
-    border-style: solid;
-    border-color:  #000099;
-    border-width: 1px 0 0 0;
-    border-radius: 20px;
-    width: 60vw !important;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    font-weight: bold;
-}
-
-.separator-line:before { /* Not really supposed to work, but does */
-    display: block;
-    content: "";
-    height: 30px;
-    margin-top: -31px;
-    border-style: solid;
-    border-color: #000099;
-    border-width: 0 0 1px 0;
-    border-radius: 20px;
-    font-weight: bold;
-}
-
-.title-softskills {
-    color: #ED6A09 !important;
-    align-self: center !important;
-    width: 100% !important;
-    font-size: 40px;
-    justify-content: center;
-    display:flex;
-    font-weight: bold;
-    margin-bottom: 40px;
-}
-
-.div-rating {
-    align-self: center;
-    width: 80%;
-    font-weight: bold;
-}
-
-.mission-card,
-.champ-libre{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 10px;
-    width: 30%;
-    color: #000099;
-}
-
-.cards{
+.cards {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -227,12 +9,8 @@
     margin-bottom: 20px;
 }
 
-.mission-title,
-.main-title,
 .family-prestation-title {
-
     color: #ED6A09;
-    font-size: 40px;
     display: flex;
     justify-content: center;
     border: 2px solid #c4c4c4;
@@ -240,25 +18,15 @@
     box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
 }
 
-.fifth-div-creation-neoworker {
-    flex-direction: column;
-}
-
-.prestation-checkbox-div {
-    display:flex;
-    flex-direction : column;
-}
-
 .checkbox-and-content {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-bottom: 10px;
-
 }
 
 .checkbox {
-    margin-right: 20px;
+    margin: 0px 20px;
 }
 
 .famille-prestation-select {
@@ -274,8 +42,6 @@
 }
 
 .family-prestation-title {
-    font-size: 30px !important;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-weight: 500;
+    margin: 10px 0px;
+    font-weight: 400;
 }
