--- a/front/src/components/admin/FormulaireCreationMission&Neoworker.css
+++ b/front/src/components/admin/FormulaireCreationMission&Neoworker.css
@@ -94,7 +94,12 @@ div.cards{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    border: 2px solid #c4c4c4;
+    border-radius: .25rem;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
+    margin-bottom: 20px;
 }
+
 
 .date-mission{
     color: #ED6A09!important;
@@ -114,4 +119,43 @@ input, textarea {
 p.made{
     color: #000099;
 font-weight: bold;
+}
+
+.family-prestation-title {
+    color: #ED6A09;
+    display: flex;
+    justify-content: center;
+    border: 2px solid #c4c4c4;
+    border-radius: .25rem;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
+    font-size: 20px;
+}
+
+.checkbox-and-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.checkbox {
+    margin: 0px 20px;
+    transform: scale(2);
+}
+
+.famille-prestation-select {
+    margin-bottom: 50px;
+}
+
+.label-prestation {
+    margin: 0;
+}
+
+.btn {
+    margin-top: 50px;
+}
+
+.family-prestation-title {
+    margin: 10px 0px;
+    font-weight: bold;
 }
