--- a/front/src/components/admin/ListeNeoworker&Mission.css
+++ b/front/src/components/admin/ListeNeoworker&Mission.css
@@ -1,41 +1,77 @@
-.div-neoworkerList {
-  display: flex ;
-  flex-wrap: wrap;
-  flex-direction: row;
+/*---------------------------------------------- Neoworker --------------------------------------------------- */
+
+.neoworker-div{
+  padding: 200px;
+  width: 80%;
+  height: 100%;
+  float: right;
+  padding-left: 100px;
 }
+.neoworker-h2{
+  text-align: left;
+  font-size: 56px;
+  font-weight: bold;
+  margin: 0px 3%;
+  color: #000099
+}
+
+.neoworker-card-div{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 
 .neoworkerCard {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 8px;
-    background: white;
-    padding: 8px 16px;
-    border: 1px solid rgb(235,235,235);
-    box-shadow: aliceblue;
-    width: 50%;
-  }
-
- .neoworkerCard-content {
-    flex-grow: 1;
-    padding: 0 24px;
-    width: 80%
-  }
-
-  .neoworkerCard-btn-container {
-      display: flex;
-      flex-direction: column;
-  }
-.neoworkerCard-btn {
-    color: white;
-    font-size: 15px!important;
-    background: #ED6A09;
-    border-radius: .25rem;
-    width: auto!important;
-    margin: 0px!important;
+  display: flex;
+  align-items: center;
+  background: white;
+  padding: 8px 16px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  padding: 10px;
+  color: black;
+  text-align: center;
+  font-size: 24px;
+  margin: 10px;
+  justify-content: space-between;
+  border-radius: .25rem;
+  width: 476px;
+  height: 200px;
+  left: 364px;
+  top: 222px;
 }
 
-/*---------------------------------------------------------------------------------------------------*/
+.neoworkerCard-content {
+  flex-grow: 1;
+  padding: 0 24px;
+  width: 80%;
+}
+
+.neoworkerCard-h1{
+font-size: 30px;
+font-weight: bold;
+}
+
+.neoworkerCard-p{
+font-size: 20px;
+}
+
+.neoworkerCard-btn-container {
+    display: flex;
+    flex-direction: column;
+}
+.neoworkerCard-btn {
+  color: white;
+  font-size: 20px;
+  background: #ED6A09;
+  border-radius: 40%;
+  height: 40px;
+  width: 100px;
+  border: none;
+  margin-bottom: 10px;
+}
+
+/*----------------------------------------- Mission ----------------------------------------------------------*/
 
 
 h2.missions-h2{
