--- a/front/src/components/admin/ListeNeoworker&Mission.css
+++ b/front/src/components/admin/ListeNeoworker&Mission.css
@@ -1,13 +1,14 @@
 /*---------------------------------------------- Neoworker --------------------------------------------------- */
 
-.neoworker-div{
+.neoworker-div {
   padding: 200px;
   width: 80%;
   height: 100%;
   float: right;
   padding-left: 100px;
 }
-.neoworker-h2{
+
+.neoworker-h2 {
   text-align: left;
   font-size: 56px;
   font-weight: bold;
@@ -15,42 +16,18 @@
   color: #000099
 }
 
-.neoworker-card-div{
+.neoworker-card-div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-
-<<<<<<< HEAD
-.neoworker-div{
-  padding: 200px;
-  width: 80%;
-  height: 100%;
-  float: right;
-  padding-left: 100px;
-}
-.neoworker-h2{
-  text-align: left;
-  font-size: 56px;
-  font-weight: bold;
-  margin: 0px 3%;
-  color: #000099
-}
-
-.neoworker-card-div{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-=======
->>>>>>> d3e64f5d4c850e8c77f882f89dd91fff1dad07a3
 
 .neoworkerCard {
   display: flex;
   align-items: center;
   background: white;
   padding: 8px 16px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   padding: 10px;
   color: black;
   text-align: center;
@@ -70,58 +47,45 @@
   width: 80%;
 }
 
-.neoworkerCard-h1{
-font-size: 30px;
-font-weight: bold;
+.neoworkerCard-p {
+  font-size: 20px;
 }
 
-.neoworkerCard-p{
-font-size: 20px;
+.neoworkerCard {
+  align-items: center;
+  background: white;
+  padding: 8px 16px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  color: black;
+  text-align: center;
+  font-size: 24px;
+  margin: 10px;
+  justify-content: space-between;
+  border-radius: .25rem;
+  width: 476px;
+  height: 200px;
+  left: 364px;
+  top: 222px;
 }
+
+.neoworkerCard-content {
+  flex-grow: 1;
+  padding: 0 24px;
+  width: 80%
+}
+
+.neoworkerCard-h1 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
 
 .neoworkerCard-btn-container {
-    display: flex;
-<<<<<<< HEAD
-    align-items: center;
-    background: white;
-    padding: 8px 16px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    padding: 10px;
-    color: black;
-    text-align: center;
-    font-size: 24px;
-    margin: 10px;
-    justify-content: space-between;
-    border-radius: .25rem;
-    width: 476px;
-    height: 200px;
-    left: 364px;
-    top: 222px;
-  }
-
- .neoworkerCard-content {
-    flex-grow: 1;
-    padding: 0 24px;
-    width: 80%
-  }
-
-  .neoworkerCard-h1{
-    font-size: 30px;
-    font-weight: bold;
-  }
-
-  .neoworkerCard-p{
-    font-size: 20px;
-  }
-  
-  .neoworkerCard-btn-container {
-      display: flex;
-      flex-direction: column;
-  }
-=======
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
->>>>>>> d3e64f5d4c850e8c77f882f89dd91fff1dad07a3
+
 .neoworkerCard-btn {
   color: white;
   font-size: 20px;
@@ -135,8 +99,7 @@ font-size: 20px;
 
 /*----------------------------------------- Mission ----------------------------------------------------------*/
 
-
-h2.missions-h2{
+h2.missions-h2 {
   text-align: left;
   font-size: 56px;
   font-weight: bold;
@@ -155,7 +118,7 @@ div.missions-cards {
   color: black;
   text-align: center;
   font-size: 24px;
-  margin:10px;
+  margin: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
