--- a/front/src/components/admin/FormulaireCreationMission&Neoworker.css
+++ b/front/src/components/admin/FormulaireCreationMission&Neoworker.css
@@ -159,3 +159,14 @@ font-weight: bold;
     margin: 10px 0px;
     font-weight: bold;
 }
+
+input[type="date"]:before {
+    content: attr(placeholder) !important;
+    color: #ED6A09;
+    margin-right: 0.5em;
+    opacity: 0.7;
+  }
+  input[type="date"]:focus:before,
+  input[type="date"]:valid:before {
+    content: "";
+  }
