--- a/front/src/components/freelancer/HomePageFreelancer.css
+++ b/front/src/components/freelancer/HomePageFreelancer.css
@@ -1,155 +1,145 @@
-
-div.freelancer-homepage {
-    color: #000099;
+ 
+.main-div {
     width: 80%;
-    height: 100vh;
+    height: auto;
     float: right;
-    margin-top: 80px;
-    display: flex;
     background-color: white;
+    display: flex;
     flex-direction: column;
-    }
-
-h1.freelancer-h1 {
-    text-align: center;
-    font-size: 56px;
-    font-weight: bold;
+    color: #000099;
 }
 
-div.profil-card {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-    align-items: center;
+.profil-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin: 20px;
 }
 
-p.name-card {
+.name-card {
     margin: 0px;
+    padding-right: 15px;
 }
 
-
-.align-photoprofilwithinput-div-freelancer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.profil-img-creation-freelancer {
-    border-radius: 50%;
-    width: 50%;
-}
-
-.picture-profil{
-    width: 50%;
+.pic-card {
+    height: 50px;
     border-radius: 50%;
 }
 
-.homepage-profil {
+.main-title {
     width: 80%;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-between;
     margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+
+    
+}
+
+.formulaire-creation-neoworker {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+
+}
+
+::placeholder {
+    color: #ED6A09 !important;
+    opacity: 0.5 !important;
+}
+
+.first-div-creation-neoworker {
+    display:flex;
+    flex-direction: column;
+    width: 80%;
+    justify-content: space-around;
     align-self: center;
 }
 
-.infos-profil {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 50%;
-}
-
-.reste-profil {
-    width: 80%;
+.align-photoprofilwithinput-div {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    margin: auto;
-    justify-content: space-around;
-    list-style-type: none;
+    justify-content: space-between;
 }
 
-.container-reste-profile{
-    display: flex;
+.profil-img-creation {
+    border-radius: 50%;
+    width: 30%;
+    align-self: center;
+}
+
+.align-field-text-div {
+    display:flex;
     flex-direction: column;
-    justify-content: space-around;
-}
-
-.champs-profil-title {
-    width: 80%;
-    height: 40px;
-    border: 2px solid;
-    align-self: center;
-    align-content: center;
-    width: 80%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-    text-align: center;
-    border-radius: 10px;
-    border-color: white;
-    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: rgba(5, 57, 152, 0.5);
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.champs-profil {
-    margin-top: 10px;
-    width: 100%;
-    height: 40px;
-    border: 2px solid;
-    align-self: center;
-    width: 80%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-    text-align: center;
-    border-radius: 10px;
-    border-color: white;
-    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: rgba(5, 57, 152, 0.5);
-    font-size: 24px;
-    font-weight: bold;
-}
-.container-champs-reste-profil{
-    width: 20%;
-}
-
-p:empty:not(:focus)::before {
-    content: attr(data-placeholder);
-  }
-
-.champs-reste-profil {
-    margin: 10px;
     width: 50%;
-    height: 40px;
-    border: 2px solid;
+}
+
+.input-firstname, 
+.input-lastname, 
+.input-email, 
+.input-tel,
+.input-password,
+.input-address,
+.input-cp,
+.input-metier,
+.input-tj_min,
+.input-tj_max,
+.input-dispo,
+.input-pref_lieu_travail,
+.input-mobilite,
+.input-Km_max
+{
+    width: 40%;
+    margin-top:10px;
+    margin-bottom:10px;
     text-align: center;
-    justify-content: space-around;
-    align-self: center;
-    width: 80%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
     border-radius: 10px;
     border-color: white;
     box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
-    color: rgba(5, 57, 152, 0.5);
+    color: #000099;
     font-size: 24px;
-    font-weight: bold;
-   }
-
-Button.btn, Button.btn:hover {
-    background: #ED6A09;
-    width: 20%;
-    font-size: larger;
-    margin:0px 40%;
-    border-radius: .25rem;
+    font-weight: 500! important;
 }
-.transformation{
-    width: 20px;
-    height: 20px;
+
+.second-div-creation-neoworker, 
+.third-div-creation-neoworker,
+.fourth-div-creation-neoworker,
+.fifth-div-creation-neoworker {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align:center;
+    align-self:center;
+    width: 80%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.div-tj_min,
+.div-tj_max,
+.div-dispo,
+.div-pref_lieu_travail,
+.div-mobilite,
+.div-km_max
+{
+    width: 47%;
+    display:flex;
+    flex-direction: column;
+    margin-top: 10px;
+    margin-bottom:10px;
+    text-align: center;
+    border-radius: 10px;
+    border-color: white;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25);
+    color: #000099;
+    font-size: 24px;
+}
+
+.input-group-text {
+    color: #ED6A09 !important;
+    font-weight: bold !important;
+    opacity: 0.5 !important;
+    width: 100% !important;
 }
