--- a/front/src/components/freelancer/HomePageFreelancer.css
+++ b/front/src/components/freelancer/HomePageFreelancer.css
@@ -55,10 +55,10 @@
     flex-direction: column;
     width: 80%;
     justify-content: space-around;
-    align-self: center;
+    align-items: center;
 }
 
-.align-photoprofilwithinput-div {
+.align-photoprofilwithfield-div {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -76,20 +76,20 @@
     width: 50%;
 }
 
-.input-firstname, 
-.input-lastname, 
-.input-email, 
-.input-tel,
-.input-password,
-.input-address,
-.input-cp,
-.input-metier,
-.input-tj_min,
-.input-tj_max,
-.input-dispo,
-.input-pref_lieu_travail,
-.input-mobilite,
-.input-Km_max
+.field-firstname, 
+.field-lastname, 
+.field-email, 
+.field-tel,
+.field-password,
+.field-address,
+.field-cp,
+.field-metier,
+.field-tj_min,
+.field-tj_max,
+.field-dispo,
+.field-pref_lieu_travail,
+.field-mobilite,
+.field-Km_max
 {
     width: 40%;
     margin-top:10px;
@@ -137,9 +137,10 @@
     font-size: 24px;
 }
 
-.input-group-text {
-    color: #ED6A09 !important;
-    font-weight: bold !important;
-    opacity: 0.5 !important;
-    width: 100% !important;
+.field-group-text {
+    color: #ED6A09;
+    font-weight: bold;
+    opacity: 0.5;
+    width: 100%;
+    align-self: center;
 }
