--- a/front/src/components/freelancer/CompetencesFreelancer.css
+++ b/front/src/components/freelancer/CompetencesFreelancer.css
@@ -71,6 +71,10 @@ img.pic-profil{
 
 Button.btn, Button.btn:hover {
     background: #ED6A09;
+    position: relative;
+    left:60%;
+    bottom: 150px;
+    font-size: x-large;    
 }
 
 .slick-next:before, .slick-prev:before{
@@ -90,10 +94,22 @@ Button.btn, Button.btn:hover {
 
 .cards {
     width: 100%;
+    border: solid red 1px;
+    border: 2px solid #c4c4c4;
+    border-radius: .25rem;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     
 }
 
 .cards-competences-title {
     overflow-x: scroll;
+}
+
+.input-CI{
+    width: 18vw;
 }
 
