--- a/front/src/components/freelancer/CompetencesFreelancer.css
+++ b/front/src/components/freelancer/CompetencesFreelancer.css
@@ -72,9 +72,9 @@ img.pic-profil{
 Button.btn, Button.btn:hover {
     background: #ED6A09;
     position: relative;
-    left:60%;
-    bottom: 150px;
-    font-size: x-large;    
+    left:50%;
+    font-size: x-large;  
+    transform: translate(-50%, -50%)  
 }
 
 .slick-next:before, .slick-prev:before{
@@ -94,7 +94,6 @@ Button.btn, Button.btn:hover {
 
 .cards {
     width: 100%;
-    border: solid red 1px;
     border: 2px solid #c4c4c4;
     border-radius: .25rem;
     box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
@@ -102,6 +101,7 @@ Button.btn, Button.btn:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border : red solid 1px;
     
 }
 
