--- a/front/src/components/freelancer/CompetencesFreelancer.css
+++ b/front/src/components/freelancer/CompetencesFreelancer.css
@@ -6,9 +6,9 @@ div.freelancer-competences {
 }
 
 div.profil-card {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-end;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
     align-items: flex-end;
 }
 
@@ -21,7 +21,7 @@ img.pic-card {
     border-radius: 50%;
 }
 
-img.pic-profil{
+img.pic-profil {
     width: 15%;
     border-radius: 50%;
 }
@@ -41,7 +41,7 @@ img.pic-profil{
     justify-content: space-between;
 }
 
-.competences-title { 
+.competences-title {
     color: #ED6A09;
     font-size: 40px;
     width: 80%;
@@ -69,23 +69,17 @@ img.pic-profil{
     min-width: 25%;
 }
 
-Button.bottom-btn, Button.bottom-btn:hover {
+Button.btn, Button.btn:hover {
     background: #ED6A09;
-    position: relative;
-    left:50%;
-    font-size: x-large;  
-    transform: translate(-50%, -50%)  
 }
 
-.slick-next:before, .slick-prev:before{
-    color:#ED6A09;
+.slick-next:before, .slick-prev:before {
+    color: #ED6A09;
     font-size: 50px;
-
 }
 
 .slick-next, .slick-prev {
     width: 120px;
-
 }
 
 .slick-prev, .slick-prev:before {
@@ -101,15 +95,20 @@ Button.bottom-btn, Button.bottom-btn:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border : red solid 1px;
-    
 }
 
-.cards-competences-title {
-    overflow-x: scroll;
+#prestation-scroll{
+    overflow-y: scroll;
+    height: 60vh;
+}
+
+.fifth-div-creation-neoworker {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width:100%;
 }
 
 .input-CI{
     width: 18vw;
 }
-
