--- a/front/src/components/admin/CommonDesign.css
+++ b/front/src/components/admin/CommonDesign.css
@@ -25,11 +25,6 @@ h1.admin-h1 {
   
 }
 
-.form-group-flex-note {
-  display: flex !important;
-  flex-direction: column !important;
-}
-
 .label-flex {
   display: flex !important;
   align-items: center !important;
@@ -109,7 +104,6 @@ Button.btn:hover {
     margin-top : 10px !important;
     margin-bottom:10px !important;
     border-radius: 10px !important;
-    /* border-color: white !important; */
     box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
     font-size: 15px !important;
     color: black! important;
@@ -118,7 +112,8 @@ Button.btn:hover {
 }
 
 .admin-input-note {
-  height: 15vh !important;
+  height: 60vh !important;
+  width: 100% !important;
   text-align: unset !important;
 }
 
@@ -196,6 +191,38 @@ div.mission-card {
     margin: 0;
 }
 
+.note-button,
+.note-button:hover {
+  position: fixed !important;
+  right: 0px !important;
+  bottom: 0px !important;
+  margin: 10px !important;
+  background: #ED6A09 !important;
+  width: 6vw !important;
+  height : 5vw !important;
+  border: 1px solid black !important;
+}
+
+.cancel-modal-button {
+  margin: 10px !important;
+} 
+
+.form-group-flex-password-create {
+  display:flex !important;
+  flex-direction: column !important;
+  margin-top: 20px !important;
+}
+
+.admin-create-input-password {
+  width: 35% !important;
+    margin-top : 10px !important;
+    margin-bottom: 20px !important;
+    border-radius: 10px !important;
+    box-shadow: 0px 4px 4px rgba(85, 71, 71, 0.25) !important;
+    font-size: 15px !important;
+    color: black! important;
+    font-weight: bold !important;
+}
 
 /* ------------------- Liste Neoworker et Missions --------------------- */
 
